--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -10,9 +10,9 @@
 
         <!-- post instructions section -->
         <div class="col-md-4">
-            <div class="card" id="submit-card">
+            <div class="card submit-card">
                 <div class="card-header text-uppercase">
-                    <h5>Post instructions:</h2>
+                    <h5>Post instructions:</h5>
                 </div>
                 <div class="card-body" id="submit-rules-body">
                     <p>RULES:</p>
@@ -33,9 +33,9 @@
 
         <!-- form to allow user submission of artwork and prompts -->
         <div class="col-md-6 create-post-div">
-            <div class="card" id="submit-card">
+            <div class="card submit-card">
                 <div class="card-header text-uppercase">
-                    <h5>submit new post:</h2>
+                    <h5>submit new post:</h5>
                 </div>
             </div>
             
