--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,13 @@
 
 {% else %}
 <!-- This is the jumbotron and hero section -->
-<div class="jumbotron jumbotron-fluid d-flex align-items-center">
+<div class="jumbotron jumbotron-fluid d-flex align-items-center img-fluid">
   <div class="container text-center">
-    <h1 class="display-4">Welcome to the Promptiverse</h1>
-    <p class="lead mb-4">Discover AI-generated art and creativity at its finest.</p>
     <button type="button" class="btn btn-warning btn-lg text-uppercase landing-button" data-toggle="modal"
       data-target="#aboutModal" aria-label="Learn more about the site">
       Learn More
     </button>
+    <p class="lead mb-4">Discover AI-generated art and creativity at its finest !</p>
   </div>
 </div>
 
@@ -29,15 +28,16 @@
       <div class="modal-content bg-dark">
         <h5 class="modal-title">Want to know more? stay a while and listen</h5>
         <p class="modal-text">You have found your way to the Promptiverse, a gallery site to showcase AI art.</p>
-        <p class="modal-text">AI art is a form of art created using artificial intelligence algorithms.
-          These algorithms are designed to learn patterns from existing data and generate new, unique outputs that can
+        <p class="modal-text">AI art is a form of art created using machine learning algorithms.
+          These models are taught to learn patterns from existing data and generate new, unique outputs that can
           be considered art.
-          The AI system can be trained on a variety of input sources, such as images, text, and audio.</p>
+          These models are trained by viewing millions of images and learning how to reproduce art.</p>
 
         <p class="modal-text">The process of creating AI art involves feeding the AI system with input data and letting
           it generate a new output based on the learned patterns.
           The generated output can then be refined or altered by a human artist to create a final piece of art.</p>
-        <p class="modal-text">Remember be respectful and constructive. Go to the Signup link to start viewing & posting!
+        <p class="modal-text">Go to the <b>SIGNUP</b> link to start viewing our ever growing gallery of amazing 
+          art, and even post your own for others to rate. And remember be respectful and constructive. 
         </p>
         <div class="modal-btn">
           <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
