--- a/static/css/style.css
+++ b/static/css/style.css
@@ -587,7 +587,7 @@ section {
 	text-decoration: underline;
 }
 
-/* Masonry Grid layout https://www.w3resource.com/html-css-exercise/html-css-practical-exercises/html-css-practical-exercise-40.php */
+/* Masonry Grid layout */
 
 /* MASONRY CONTAINER */
 .masonry-container {
