--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 
 <head>
   <title>Promptiverse</title>
+  <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
 
   <!-- Stylesheet and precon data -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
