new file size check function

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -18,12 +18,13 @@
                     <p>RULES:</p>
                     <ol>
                         <li>Do not post any offensive or inappropriate images.</li>
-                        <li>All images require validation by an admin before they can go live on the platform.</li>
                         <li>Do not post any harmful or illegal content.</li>
-                        <li>Always include the prompt information in your post. Do not post non prompt information in this field.</li>
-                        <li>Include only negative prompt information if applicable. Where none exists enter 'None'.</li>
-                        <li>Provide a brief description of the technology used and any post-processing that was done to the image. 
-                            This will help other users understand how you created the image and can be useful for educational purposes</li>
+                        <li>All images require validation by an admin before they can go live on the platform.</li>
+                        <li><b>Prompt:</b> Always include the prompt information in your post. Do not post non prompt information in this field.</li>
+                        <li><b>Negative Prompt:</b> Include only negative prompt information if applicable. Where none exists enter 'None'.</li>
+                        <li><b>Method:</b> Provide a brief description of any post-processing that was done to the image. 
+                            This will help other users understand it's creation.</li>
+                        <li>Currently users are limited to a file size of 1MB per image.</li>
                     </ol>
                     <p>Remember that failure to comply with these instructions may result in your post being removed and/or your account being 
                         suspended or terminated. Thank you for your cooperation and for helping to keep our platform safe and respectful for everyone.</p>
