fix submit form style

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -863,3 +863,9 @@ li {
 	min-width: 100%;
 	background-color: #ffffff00;
 }
+
+@media only screen and (max-width: 768px) {
+	#update-post-img {
+		text-align: center;
+	}
+}
