--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -6,7 +6,7 @@
   <h3 class="update-title">Update Post:</h3>
   <div class="row d-flex">
 
-    <div class="col-lg-6 col-md-6 col-sm-12">
+    <div class="col-lg-6 col-md-6 col-sm-12" id="update-post-img">
       <div class="post-image">
         {% if "placeholder" in post.featured_image.url %}
         <img src="https://via.placeholder.com/512x512" alt="Post Image" class="img-fluid">
