--- a/templates/image_post.html
+++ b/templates/image_post.html
@@ -90,12 +90,12 @@
 
 <hr>
 
-<div class="container-fluid">
-  <div class="row">
+<div class="container-fluid d-flex justify-content-center">
+  <div class="row container-fluid justify-content-center" style="padding: 0;">
     <!-- comments section displays user feedback -->
-    <div class="col-lg-8 col-md-8 col-sm-12">
+    <div class="col-lg-8 col-md-7 col-sm-12 comment-card-col">
       {% for comment in post.comments.all %}
-      <div class="card mb-3" id="comment-card">
+      <div class="card mb-3 comment-card">
         <div class="card-header">
           {{ comment.name }} said on {{ comment.created_on }}:
         </div>
@@ -113,15 +113,15 @@
 
     </div>
 
-    <div class="col-lg-4 col-md-4 col-sm-12 text-right">
+    <div class="col-lg-4 col-md-5 col-sm-12 text-right" style="padding: 0;">
       <!-- comment section form -->
 
-      <div class="row justify-content-center">
-        <div class="card-body" id="comment-card">
+      <div class="row container-fluid comment-form-row">
+        <div class="card-body comment-form">
           {% if user.is_authenticated %}
           <h3>LEAVE A COMMENT:</h3>
           <p>Posting as: {{ user.username }}</p>
-          <form method="post" style="margin-top: 1.3em;">
+          <form method="post">
             {{ comment_form | crispy }}
             {% csrf_token %}
             <button type="submit" class="btn btn-warning">Submit</button>
