--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -18,7 +18,7 @@
                   {% if "placeholder" in post.featured_image.url %}
                   <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="Placeholder image, no user image available" loading="lazy">
                   {% else %}
-                  <img class="card-img" src="{{ post.featured_image.url }}" alt="{{ post.title }}" loading="lazy">
+                  <img class="card-img" src="{{ post.featured_image.url }}" alt="{{ post.title }}" loading="lazy" width="100%" height="100%">
                   {% endif %}
                 </div>
                 <!-- overlays which contain the likes and comments displays -->
