final commit code clean and readme

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,16 +1,21 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
+<html class="h-100" lang="en">
 
 <head>
   <title>Promptiverse</title>
+  <link rel="shortcut icon" href="{%  static 'favicon.ico' %}">
 
   <!-- Stylesheet and precon data -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Jeffrey Bull">
+  <meta name="description"
+    content="Promptiverse - an AI gallery site for sharing and viewing AI generated art.">
+  <meta name="keywords" content="AI, Machine Learning, AI art, digital art, art sharing, user posts, concept art, fantast art, sci-fi art">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
