--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,7 @@
 
 <header>
 
-  <!-- Main logout or account navigation -->
+  <!-- Main logout & account navigation -->
   <nav class="navbar bg-dark navbar-items">
     <a class="navbar-brand" href="{% url 'home' %}">Promptiverse</a>
     <div class="ml-auto">
@@ -21,7 +21,7 @@
     </div>
   </nav>
 
-  <!-- gallery or submissions pages -->
+  <!-- gallery & submissions nav-->
   <nav class="navbar sub-nav-col navbar-items">
     <div class="container-fluid sub-nav-bar">
       <div class="mr-auto">
