--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
 <div class="wrapper">
   <div class="push"></div>
 </div>
-<!-- This the footer and SM links -->
+<!-- Footer and footer content -->
 <footer class="footer bg-dark d-flex container-fluid justify-content-center">
   <div class="foot-div d-flex justify-content-center align-items-center">
     <p>Copyright ©2023 | Promptiverse | <a class="footer-modal" data-toggle="modal" data-target="#legalModal" aria-label="Learn more about our Legal policies">Legal</a> | Socials Coming Soon</p>
